优化null值的返回为Optional.empty()