@@ -2,15 +2,16 @@ package com.lrenyi.spring.nats;
 
 import io.nats.client.Connection;
 import java.util.List;
+import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
 
 public class ConnectionHolder {
     private final AtomicInteger next = new AtomicInteger(0);
     
-    public Connection getValidateConnection() {
+    public Optional<Connection> getValidateConnection() {
         List<Connection> allConnection = NatsConfiguration.findAllConnection();
         if (allConnection.isEmpty()) {
-            return null;
+            return Optional.empty();
         }
         int i = next.get();
         Connection nc;
@@ -18,9 +19,9 @@ public class ConnectionHolder {
             nc = allConnection.get(i);
         } else {
             next.set(0);
-            nc = allConnection.get(0);
+            nc = allConnection.getFirst();
         }
         next.incrementAndGet();
-        return nc;
+        return Optional.of(nc);
     }
 }
